# mes_equipes

./: .codecov.yml  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  auth__command_8c.html  auth__command_8c.js  auth__command_8c__incl.map  auth__command_8c__incl.md5  body__dump_8c.html  body__dump_8c.js  body__dump_8c__incl.map  body__dump_8c__incl.md5  body__setter_8c.html  body__setter_8c.js  body__setter_8c__incl.map  body__setter_8c__incl.md5  call__command_8c.html  call__command_8c.js  call__command_8c__incl.map  call__command_8c__incl.md5  callback__201_8c.html  callback__201_8c.js  callback__201_8c__incl.map  callback__201_8c__incl.md5  callback__202_8c.html  callback__202_8c.js  callback__202_8c__incl.map  callback__202_8c__incl.md5  callback__203_8c.html  callback__203_8c.js  callback__203_8c__incl.map  callback__203_8c__incl.md5  callback__204_8c.html  callback__204_8c.js  (+1347 more)
client/: CMakeLists.txt  (+2 more)
client/client_net_utils/: CMakeLists.txt  client_utils.c  fetch_message.c  manage_fd_sets.c  send_message.c  update_client.c  update_server.c
client/client_net_utils/include/: client_utils.h  internals.h
client/src/: CMakeLists.txt  Makefile  cmake_install.cmake  entrypoint.c  run_teams_client.c  stop_teams_client.c  teams_client.c
client/src/include/: teams_client.h  teams_responses.h
client/src/server_responses_callbacks/: CMakeLists.txt  callback_201.c  callback_202.c  callback_203.c  callback_204.c  callback_206.c  callback_207.c  callback_208.c  callback_209.c  callback_210.c  callback_211.c  callback_212.c  callback_213.c  callback_214.c  callback_215.c  callback_216.c  callback_217.c  callback_218.c  callback_219.c  callback_220.c  callback_311.c  callback_320.c  callback_401.c  callback_601.c  callback_602.c  callback_603.c  callback_604.c  callback_605.c  callback_606.c  callback_607.c
objects/: CMakeLists.txt  Makefile  cmake_install.cmake
objects/body/include/: object_body.h
objects/body/src/: CMakeLists.txt  body_dump.c  body_setter.c  object_body.c
objects/channel/include/: object_channel.h
objects/channel/src/: CMakeLists.txt  channel_dump.c  channel_setter.c  object_channel.c
objects/comment/include/: object_comment.h
objects/comment/src/: CMakeLists.txt  comment_dump.c  comment_setter.c  object_comment.c
objects/conversation/include/: object_conversation.h
objects/conversation/src/: conversation_dump.c  conversation_setter.c  object_conversation.c
objects/description/include/: object_description.h
objects/description/src/: CMakeLists.txt  description_dump.c  description_setter.c  object_description.c
objects/includes/: object_body.h  object_channel.h  object_comment.h  object_conversation.h  object_description.h  object_message.h  object_name.h  object_status.h  object_team.h  object_thread.h  object_user.h  object_uuid.h
objects/message/include/: object_message.h
objects/message/src/: CMakeLists.txt  message_dump.c  message_setter.c  object_message.c
objects/name/include/: object_name.h
objects/name/src/: CMakeLists.txt  name_dump.c  name_setter.c  object_name.c
objects/src/: CMakeLists.txt  Makefile  cmake_install.cmake  object_body.c  object_channel.c  object_comment.c  object_conversation.c  object_description.c  object_message.c  object_name.c  object_status.c  object_team.c  object_thread.c  object_user.c  object_uuid.c
objects/status/include/: object_status.h
objects/status/src/: CMakeLists.txt  object_status.c  status_dump.c  status_setter.c
objects/team/include/: object_team.h
objects/team/src/: CMakeLists.txt  object_team.c  team_dump.c  team_remove.c  team_setter.c
objects/thread/include/: object_thread.h
objects/thread/src/: CMakeLists.txt  object_thread.c  thread_dump.c  thread_setter.c
objects/user/include/: object_user.h
objects/user/src/: CMakeLists.txt  object_user.c  user_dump.c  user_remove.c  user_setter.c
objects/uuid/include/: object_uuid.h
objects/uuid/src/: CMakeLists.txt  object_uuid.c  uuid_cmp.c  uuid_dump.c  uuid_setter.c
objects/wrapper/include/: lower_component_adding.h  object_wrapper.h  pack_json.h  packer_json.h  unpack_json.h  upper_component_adding.h
objects/wrapper/src/: component_dump.c  find_by_name.c  get_associated_team.c  get_child_list.c  lower_component_adding.c  lower_component_get.c  object_wrapper.c  pack_wrapper_to_json.c  upper_component_adding.c  upper_component_get.c  user_and_team_relation.c  uuid_find_prefix.c  wrapper_interaction.c  wrapper_modification.c
server/net_utils/: CMakeLists.txt  display_utils.c  fd_set_manage.c  peer.c  remove_unused_sockets.c  select.c  tcp_server.c
server/net_utils/auth/: CMakeLists.txt  user.c
server/net_utils/fd_sets_manage/: CMakeLists.txt  fd_set_manage.h  fd_sets_manage.c  fd_sets_manage.h  server_accept_new_client.c  server_close_client.c  server_read_client.c  server_write_client.c
server/net_utils/include/: net_utils.h
server/src/: CMakeLists.txt  Makefile  cli_commands.c  client_wrapper.c  cmake_install.cmake  convert_command_to_structure.c  entrypoint.c  my_teams_server.c  server_data.c  server_run.c
server/src/commands/: CMakeLists.txt  command_help.c  command_info.c  command_login.c  command_logout.c  command_send.c  command_user.c  command_users.c  login_command.c  rcodes.h
server/src/core/: CMakeLists.txt  auth_command.c  call_command.c  cli_commands.c  compute_command.c  convert_command_to_structure.c  create_command.c  event_gestion.c  fill_command_arguments.c  help_command.c  info_command.c  list_command.c  my_teams_server.c  send_command.c  server_data.c  server_run.c  subscribe_command.c  use_command.c  user_list_command.c
server/src/include/: cli_commands.h  client_wrapper.h  my_teams_server.h  parser.h
server/src/parser/: CMakeLists.txt  call_command.c  check_command.c  cli_commands.c  cli_commands.h  compute_command.c  convert_command_to_structure.c  fill_command_arguments.c  my_str_to_word_array.c  print_retcode.c  split_command.c  split_command.h
tests/unit_tests/objects/: CMakeLists.txt
(+218 files in other folders)
