add_subdirectory(body)
add_subdirectory(channel)
add_subdirectory(comment)
add_subdirectory(conversation)
add_subdirectory(description)
add_subdirectory(message)
add_subdirectory(name)
add_subdirectory(status)
add_subdirectory(team)
add_subdirectory(thread)
add_subdirectory(user)
add_subdirectory(uuid)
add_subdirectory(wrapper)